fixing backdrop-filter to appear on mobile for readability

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,13 +14,19 @@
 
 
 html {
+    display: block;
     background: url(../assets/images/code-language.jpg) no-repeat center center fixed;
     background-size: cover;
+    
+}   
 
+.filter {
+    backdrop-filter: blur(10px);
 }
 
 body {
-    backdrop-filter: blur(10px);
+    padding: 0;
+    margin: 0;
 }
 
 header {
@@ -39,7 +45,7 @@ h1 {
 
 }
 
-header h1 img {
+h1 img {
     margin-left: -35px;
     width: 210px;
     height: 200px;
